--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.7.1",
     "tsparticles": "^2.7.1",
