--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.31.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.1.0",
     "react-dom": "^18.2.0",
-    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.7.1",
     "tsparticles": "^2.7.1",
